--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -13,7 +13,7 @@
     left: 0;
     right: 0;
     margin: 0 auto;
-    font-size: 5em;
+    font-size: 4em;
     line-height: 1em;
     color: #696969;
     opacity: 0;
@@ -52,7 +52,8 @@
     padding: 2em;
     padding-left: 40%;
     color: #FFFFFF;
-    background: linear-gradient(140deg, #f31b48, #f31b48, #940590, #0ab779);  
+    background: linear-gradient(140deg, #f31b48, #f31b48, #940590, #0ab779);
+    transition: all 0.5s; 
 }
 
 .name {
@@ -60,7 +61,7 @@
     font-family: 'Playfair Display', serif;
     font-size: 5em;
     line-height: 1em;
-    transition: all 0.5s ease-in;
+    transition: all 0.5s;
 }
 
 .title {
@@ -69,7 +70,7 @@
     font-family: 'Playfair Display', serif;
     text-transform: uppercase;
     letter-spacing: 0.5em;
-    transition: all 0.5s ease-in;
+    transition: all 0.5s;
 }
 
 .github-link {
@@ -99,6 +100,11 @@
 .initial-header .site-nav-list>li {
     opacity: 0;
 }
+.initial-header .my-card {
+    height: 0.15em;
+    padding-top: 0;
+    padding-bottom: 0;
+}
 /* Initial Header Styles - End */
 
 /* Fixed Header Styles - Start */
@@ -123,6 +129,9 @@
 .fix-header .my-card {
     position: relative;
     width: 100%;
+    height: 0.15em;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .fix-header ul.site-nav-list {
@@ -167,13 +176,23 @@ ul.site-nav-list li.active {
 /* Tab Styles - End */
 
 /* Mobile Styles - Start */
-@media (max-width: 500px) {
+@media (max-width: 650px) {
+    .hello-card {
+        margin-top: 3em;
+    }
     .main-header {
         padding-top: 1.5em; 
     }
 
     .me-card {
-        height: 42em;
+        position: relative;
+        height: 41.5em;
+    }
+
+    .my-card-wrapper {
+        position: relative;
+        margin-top: 95%;
+        height: 14.4em;
     }
 
     .my-card, .my-dp {
@@ -193,23 +212,37 @@ ul.site-nav-list li.active {
     }
 
     .my-card {
-        margin-top: 95%;
+        position: absolute;
+        bottom: 0;
         padding-left: 2em;
         background: linear-gradient(140deg, #f31b48, #940590, #0ab779);
     }
 
+    .site-nav {
+        display: none;
+    }
+
     /* Fixed Header Styles - Start */
+    .fix-header .my-dp {
+        display: none;
+    }
     .fix-header .my-card {
         margin-top: 0
+    }
+    .fix-header .my-card-wrapper {
+        margin-top: 0;
+        height: 0;
     }
     /* Fixed Header Styles - End */
 
     /* Initial Header Styles - Start */
-    .initial-header .hello-card {
-        margin-top: 3em;
-    }
     .initial-header .me-card {
-        margin-top: 41.75em;
+        margin-top: 41.5em;
+        height: 0.15em;
+    }
+    .initial-header .my-card-wrapper {
+        position: relative;
+        margin-top: 0;
         height: 0.15em;
     }
     .initial-header .my-dp {
@@ -219,4 +252,31 @@ ul.site-nav-list li.active {
         margin-top: 0;
     }
     /* Initial Header Styles - End */
+}
+
+@media (max-width: 650px) and (min-width: 450px) {
+    .me-card {
+        width: 80%;
+        max-width: 370px;
+    }
+
+}
+
+@media (max-width: 400px) {
+    .me-card {
+        height: 38.5em;
+    }
+    .initial-header .me-card {
+        margin-top: 38.5em;
+        height: 0.15em;
+    }
+}
+@media (max-width: 330px) {
+    .me-card {
+        height: 35.5em;
+    }
+    .initial-header .me-card {
+        margin-top: 35.5em;
+        height: 0.15em;
+    }
 }
